[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://Object.gd" type="Script" id=4]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/mountainrange.jpg" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 34.2345

[sub_resource type="CircleShape2D" id=3]
radius = 33.0606

[node name="Node2D" type="Node2D"]
position = Vector2( 63, 511 )
script = ExtResource( 3 )
ground_scene = ExtResource( 5 )

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 407, 0 )
current = true

[node name="Label_Stamina" type="Label" parent="Player"]
margin_left = -32.0
margin_top = -83.0
margin_right = 20.0
margin_bottom = -69.0
text = "asdfadsf"

[node name="Label_Mode" type="Label" parent="Player"]
margin_left = -32.0
margin_top = -68.0
margin_right = 20.0
margin_bottom = -54.0
text = "asdfadsf"

[node name="Label_Velocity" type="Label" parent="Player"]
margin_left = -32.0
margin_top = -52.0
margin_right = 20.0
margin_bottom = -38.0
text = "asdfadsf"

[node name="Object" type="Area2D" parent="."]
position = Vector2( 502, -186 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Object"]
rotation = 3.14159
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Object"]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Object"]

[node name="Label" type="Label" parent="Object"]
margin_left = -37.0
margin_top = 37.0
margin_right = 43.0
margin_bottom = 51.0
text = "I've been hit"

[node name="Object2" type="Area2D" parent="."]
position = Vector2( 948, -263 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Object2"]
rotation = 3.14159
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Object2"]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Object2"]

[node name="Label" type="Label" parent="Object2"]
margin_left = -37.0
margin_top = 37.0
margin_right = 43.0
margin_bottom = 51.0
text = "I've been hit"

[node name="PlayerStartPosition" type="Position2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.7 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_left = -240.0
margin_top = -1008.0
margin_right = 2762.0
margin_bottom = 992.0
texture = ExtResource( 7 )
stretch_mode = 2

[connection signal="body_entered" from="Object" to="Player" method="_on_Object_body_entered"]
[connection signal="body_entered" from="Object" to="Object" method="_on_Object_body_entered"]
[connection signal="screen_exited" from="Object/VisibilityNotifier2D" to="Object" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Object2" to="Player" method="_on_Object_body_entered"]
[connection signal="body_entered" from="Object2" to="Object2" method="_on_Object_body_entered"]
[connection signal="screen_exited" from="Object2/VisibilityNotifier2D" to="Object2" method="_on_VisibilityNotifier2D_screen_exited"]
